--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -5,4 +5,50 @@
   display: inline-block;
   position: relative;
   cursor: pointer;
+  margin-bottom: -3.5px;
+}
+
+.copy-button {
+  width: 100px;
+  height: 30px;
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  margin-top: -15px;
+  margin-left: -50px;
+  background: rgba(255, 255, 255, 0.493);
+  border: none;
+  cursor: pointer;
+
+  text-align: center;
+  opacity: 0;
+}
+
+.box-content {
+  padding: 10px;
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  bottom: 0px;
+  letter-spacing: 1px;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+/* When you hover over the colorbox... affect the copy button */
+.color-box:hover .copy-button {
+  opacity: 8;
+}
+
+.more-button {
+  background: rgba(255, 255, 255, 0.493);
+  position: absolute;
+  width: 70px;
+  height: 30px;
+  bottom: 0px;
+  right: 0px;
+  border: none;
+  color: white;
+  text-align: center;
+  line-height: 30px;
 }
