--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -52,3 +52,52 @@
   text-align: center;
   line-height: 30px;
 }
+
+.copy-overlay {
+  opacity: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(0.1);
+}
+
+.copy-overlay.show {
+  opacity: 1;
+  transform: scale(50);
+  z-index: 10;
+  position: absolute;
+  transition: transform 0.95s ease-in-out;
+  overflow: hidden;
+}
+.copy-msg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.3rem;
+  transform: scale(0.1);
+  opacity: 0;
+  color: white;
+  flex-direction: column;
+}
+.copy-msg.show {
+  transform: scale(0.1);
+  opacity: 1;
+  z-index: 25;
+  transform: scale(1);
+  transition: transform 0.55s ease-in-out;
+  transition-delay: 0.05s;
+}
+.copy-msg h1 {
+  font-weight: 400;
+  text-align: center;
+  text-shadow: 1px 2px black;
+  background: #ffffff25;
+  width: 100%;
+  margin-bottom: 0;
+  padding: 10px;
+}
