--- a/src/Palette.css
+++ b/src/Palette.css
@@ -1,6 +1,43 @@
-.palette {
-  height: 100vh;
+.palette-hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  box-shadow: 0px 12px 37px 5px #d8d8d863;
 }
+.palette {
+  /* height: 100vh; */
+}
+.palette-hero img {
+  width: 18%;
+}
+
 .palette-colors {
-  height: 90%;
+  height: 100%;
+  margin: 10px;
+  display: flex;
+}
+.slider {
+  width: 350px;
+  margin: 0 10px;
+  display: inline-block;
+}
+
+/* Overwriting css from rc-slider.css file  */
+.rc-slider-track {
+  background-color: transparent;
+}
+.rc-slider-handle,
+.rc-slider-handle:active,
+.rc-slider-handle:focus,
+.rc-slider-handle:hover {
+  margin-top: -3px;
+  margin-left: -7px;
+  background-color: #e3ab29;
+  outline: none;
+  border: 2px solid gold;
+  box-shadow: none;
+}
+.rc-slider-rail {
+  height: 8px;
 }
